// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-iu2at0"
  data-cy="badge"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1v2vcel"
  data-cy="badge"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-iu2at0"
  data-cy="badge"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-wrizyw"
  data-cy="badge"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-1bcogwf"
  data-cy="badge"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-1nxr7gm"
  data-cy="badge"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-dsjkko"
  data-cy="badge"
>
  warning
</span>
`;
